[tool.poetry]
name = "job search"
version = "0.1.0"
description = ""
authors = ["Islam <islamka.1994@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.0.0"
mypy = "^1.8.0"
black = "^24.1.0"
isort = "^5.13.2"
requests = "^2.31.0"

[tool.mypy]
disallow_untyped_defs = true

[tool.black]
line-length = 119

[tool.isort]
line_length = 119

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
